{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 15,
  "lineage": "0cdc351c-8ddc-e2c9-bcdc-998405ec2d65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c8e29a61d001f8e",
            "association_id": "eipassoc-0eef6f2133fdd37bb",
            "domain": "vpc",
            "id": "eipalloc-01c8e29a61d001f8e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0694fc9c55b12509e",
            "private_dns": "ip-10-0-2-185.us-east-2.compute.internal",
            "private_ip": "10.0.2.185",
            "public_dns": "ec2-18-191-14-251.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.14.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416240322226:internet-gateway/igw-07e54feb84719f88a",
            "id": "igw-07e54feb84719f88a",
            "owner_id": "416240322226",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-02fa742325da5224a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c8e29a61d001f8e",
            "association_id": "eipassoc-0eef6f2133fdd37bb",
            "connectivity_type": "public",
            "id": "nat-07ebfc4c55b25db4c",
            "network_interface_id": "eni-0694fc9c55b12509e",
            "private_ip": "10.0.2.185",
            "public_ip": "18.191.14.251",
            "subnet_id": "subnet-06dbd2d038878084a",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416240322226:route-table/rtb-0fb088852a26fcdd8",
            "id": "rtb-0fb088852a26fcdd8",
            "owner_id": "416240322226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07ebfc4c55b25db4c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-rt"
            },
            "tags_all": {
              "Name": "main-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fa742325da5224a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main-natgw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416240322226:route-table/rtb-0dad653a6605b2e91",
            "id": "rtb-0dad653a6605b2e91",
            "owner_id": "416240322226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e54feb84719f88a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-rt"
            },
            "tags_all": {
              "Name": "main-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fa742325da5224a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070d0fe96c254af70",
            "route_table_id": "rtb-0fb088852a26fcdd8",
            "subnet_id": "subnet-06dbd2d038878084a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041ab87305f61c900",
            "route_table_id": "rtb-0dad653a6605b2e91",
            "subnet_id": "subnet-057f48fa2347e4538"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416240322226:subnet/subnet-057f48fa2347e4538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f48fa2347e4538",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "416240322226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-1"
            },
            "tags_all": {
              "Name": "app-subnet-1"
            },
            "vpc_id": "vpc-02fa742325da5224a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416240322226:subnet/subnet-06dbd2d038878084a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dbd2d038878084a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "416240322226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-2"
            },
            "tags_all": {
              "Name": "app-subnet-2"
            },
            "vpc_id": "vpc-02fa742325da5224a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416240322226:vpc/vpc-02fa742325da5224a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3218f77033b980e",
            "default_route_table_id": "rtb-0f0a0ce919cd777fd",
            "default_security_group_id": "sg-00473211555c83ce4",
            "dhcp_options_id": "dopt-0b25f9cdc493ea11d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02fa742325da5224a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0a0ce919cd777fd",
            "owner_id": "416240322226",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}